chore: only load telemetry in prod builds
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/layouts/StandaloneLayout.astro
+++ b/src/layouts/StandaloneLayout.astro
@@ -11,7 +11,9 @@ import '../../node_modules/@astrojs/starlight/style/asides.css';
 import '../../node_modules/@astrojs/starlight/style/util.css';
 import 'virtual:starlight/optional-css';
 
-import StandaloneFooter from '../components/StandaloneFooter.astro';
+import StandaloneFooter from '~/components/StandaloneFooter.astro';
+import GoogleTagManager from '~/components/telemetry/GoogleTagManager.astro';
+import HubSpot from '~/components/telemetry/HubSpot.astro';
 
 export interface Props {
   title: string;
@@ -43,24 +45,8 @@ const ogUrl = Astro.url.href;
     {
       import.meta.env.PROD && (
         <>
-          <!-- Google Tag Manager -->
-          <script is:inline>
-            (function (w, d, s, l, i) {
-              w[l] = w[l] || [];
-              w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-              var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-              j.async = true;
-              j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-              f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-T58STPCJ');
-          </script>
-          <!-- HubSpot -->
-          <script
-            is:inline
-            src="https://js-eu1.hs-scripts.com/144345473.js"
-            async></script>
+          <GoogleTagManager />
+          <HubSpot />
         </>
       )
     }
