--- a/src/layouts/StandaloneLayout.astro
+++ b/src/layouts/StandaloneLayout.astro
@@ -14,6 +14,7 @@ import 'virtual:starlight/optional-css';
 import StandaloneFooter from '~/components/StandaloneFooter.astro';
 import GoogleTagManager from '~/components/telemetry/GoogleTagManager.astro';
 import HubSpot from '~/components/telemetry/HubSpot.astro';
+import ReCAPTCHA from '~/components/telemetry/ReCAPTCHA.astro';
 
 export interface Props {
   title: string;
@@ -49,6 +50,7 @@ const ogUrl = Astro.url.href;
         </>
       )
     }
+    <ReCAPTCHA />
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 min-h-screen">
     <main>
