chore: add trailing slash
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -124,7 +124,7 @@ import distr from '../assets/distr-brand.svg';
         <ul class="space-y-3 text-sm list-none pl-0">
           <li>
             <a
-              href="/compare/replicated"
+              href="/compare/replicated/"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
               Distr vs Replicated
             </a>
