--- a/src/layouts/StandaloneLayout.astro
+++ b/src/layouts/StandaloneLayout.astro
@@ -39,6 +39,7 @@ const ogUrl = Astro.url.href;
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
+    <meta name="robots" content="noindex" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="sitemap" href="/sitemap-index.xml" />
