--- a/src/components/overwrites/SocialIcons.astro
+++ b/src/components/overwrites/SocialIcons.astro
@@ -17,7 +17,7 @@ import GitHubStarButton from '../common/GitHubStarButton.astro';
   class="relative no-underline text-xs inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg no-underline group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
   <span
     class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-    Get a demo
+    Book Demo
   </span>
 </a>
 
