--- a/src/pages/onboarding.astro
+++ b/src/pages/onboarding.astro
@@ -1,6 +1,6 @@
 ---
-import StandaloneLayout from '../layouts/StandaloneLayout.astro';
-import MultiStepForm from '../components/signup/MultiStepForm.astro';
+import StandaloneLayout from '~/layouts/StandaloneLayout.astro';
+import MultiStepForm from '~/components/signup/MultiStepForm.astro';
 
 const pageTitle = 'Onboarding - Book a Meeting | Distr';
 const pageDescription =
