chore: streamline discord url
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -156,6 +156,15 @@ import distr from '../assets/distr-brand.svg';
           </li>
           <li>
             <a
+              href="https://discord.gg/6qqBSAWZfW"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
+              Discord
+            </a>
+          </li>
+          <li>
+            <a
               href="/privacy-policy/"
               rel="noopener noreferrer"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
