--- a/src/components/telemetry/ReCAPTCHA.astro
+++ b/src/components/telemetry/ReCAPTCHA.astro
@@ -4,5 +4,6 @@ const reCaptchaKey = import.meta.env.RE_CAPTCHA_KEY;
 
 <script
   is:inline
-  src={`https://www.google.com/recaptcha/enterprise.js?render=${reCaptchaKey}`}
-  async></script>
+  src={`https://www.google.com/recaptcha/enterprise.js`}
+  async
+  defer></script>
