chore: disable registration button by default
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/signup/MultiStepForm.astro
+++ b/src/components/signup/MultiStepForm.astro
@@ -388,6 +388,7 @@ const signupSteps = [
               <button
                 type="submit"
                 id="submit-signup"
+                disabled
                 class="w-full mt-4 py-3 px-6 bg-accent-600 hover:bg-accent-900 disabled:bg-gray-400 text-white font-semibold rounded-md transition-colors cursor-pointer">
                 <span id="signup-text">Continue</span>
                 <span id="signup-loading" class="hidden">Submitting...</span>
