--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -73,7 +73,7 @@ import distr from '../assets/distr-brand.svg';
         <ul class="space-y-3 text-sm list-none pl-0">
           <li>
             <a
-              href="/docs/getting-started/what-is-distr/"
+              href="/docs/"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
               Documentation
             </a>
