--- a/src/components/telemetry/GoogleTagManager.astro
+++ b/src/components/telemetry/GoogleTagManager.astro
@@ -6,7 +6,7 @@
       j = d.createElement(s),
       dl = l != 'dataLayer' ? '&l=' + l : '';
     j.async = true;
-    j.src = 'https://distr.sh/ggg/gtm.js?id=' + i + dl;
+    j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
     f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-T58STPCJ');
 </script>
