refactor: cta button group
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/home/ProductsSection.astro
+++ b/src/components/home/ProductsSection.astro
@@ -1,6 +1,6 @@
 ---
 import ThemedImage from '../util/ThemedImage.astro';
-import SignupButton from '../SignupButton.astro';
+import SignupButton from '~/components/buttons/SignupButton.astro';
 import {images} from '~/assets/index';
 
 const products = [
