--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
 import {Icon} from 'astro-icon/components';
 import StarlightLayout from '../layouts/StarlightLayout.astro';
-import DemoButton from '../components/DemoButton.astro';
+import DemoButton from '~/components/buttons/DemoButton.astro';
 import ContactForm from '../components/ContactForm';
 
 const formsServerBaseUrl = import.meta.env.FORMS_SERVER;
