--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -1,6 +1,6 @@
 ---
-import DemoButton from '../DemoButton.astro';
-import SignupButton from '../SignupButton.astro';
+import DemoButton from '~/components/buttons/DemoButton.astro';
+import SignupButton from '~/components/buttons/SignupButton.astro';
 import HeroCarousel from './HeroCarousel.astro';
 import {images} from '~/assets/index';
 ---
