--- a/src/components/home/CTASection.astro
+++ b/src/components/home/CTASection.astro
@@ -1,6 +1,6 @@
 ---
-import DemoButton from '~/components/DemoButton.astro';
-import SignupButton from '~/components/SignupButton.astro';
+import DemoButton from '~/components/buttons/DemoButton.astro';
+import SignupButton from '~/components/buttons/SignupButton.astro';
 ---
 
 <section class="py-8 md:py-16 lg:py-24 bg-white dark:bg-gray-900">
