chore: switch to distr-onboarding link
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/booking/CalComIFrame.astro
+++ b/src/components/booking/CalComIFrame.astro
@@ -45,7 +45,7 @@
   Cal.ns.demo('inline', {
     elementOrSelector: '#my-cal-inline-demo',
     config: {layout: 'month_view'},
-    calLink: 'team/gk/demo',
+    calLink: 'team/gk/distr-onboarding',
   });
 
   Cal.ns.demo('ui', {hideEventTypeDetails: false, layout: 'month_view'});
